'review' organized into units.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -382,52 +382,100 @@ sites, crunching on scientific data, among many, *many* other places.
 
 #### Objectives {-}
 
+##### Write and run programs
+
 By the end of this unit, students should be able to:
 
-#### Write and run programs
-
-1. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
-   [=comp1020-first-year-review]
+1. [*comp1020-choose-an-ide]
+2. [*comp1020-download-install-jdk]
+3. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
+   [=comp1020-compile-and-run-from-ide]
+   [=comp1020-write-compile-run-hello-world-java]
    
 ##### Create and use variables in a program
 
-2. [*comp1010-declare-use-variables] [=comp1500-variables]
-3. [*comp1010-write-evaluate-arithmetic-expressions]
+By the end of this unit, students should be able to:
+
+1. [*comp1020-use-naming-conventions]
+2. [*comp1010-declare-use-variables] [~comp1500-variables]
+   [=comp1020-use-primitives] [=comp1020-use-variables-in-java]
+3. [*comp1010-create-use-strings] [=comp1020-use-strings]
+   [=comp1020-use-add-concat-operator]
+4. [*comp1010-determine-expression-type] [=comp1020-predict-type-of-expression]
+5. [*comp1010-write-evaluate-arithmetic-expressions]
    [=comp1500-visual-language-simple-sequence]
-4. [*comp1010-basic-print-debugging]
-5. [*comp1010-accept-use-input] [=comp1500-visual-io] [=comp1500-io]
-6. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
-7. [*comp1010-use-floating-point]
-8. [*comp1010-evaluate-float-expression]
-9. [*comp1010-determine-expression-type]
-10. [*comp1010-explain-difference-number-types]
-11. [*comp1010-call-math-library-functions]
-12. [*comp1010-create-use-strings]
-13. [*comp1010-convert-numbers-strings]
-14. [*comp1010-create-use-char]
-15. [*comp1010-evaluate-string-expressions]
-16. [*comp1010-use-different-number-types]
-17. [*comp1010-casting-between-number-types]
-18. [*comp1010-evaluate-casting-in-expression]
-19. [*comp1010-create-and-use-boolean-variables] [~comp1500-logical-expressions]
-20. [*comp1010-evaluate-boolean-expressions-logical-operators]
+   [=comp1020-use-arithmetic-operators]
+6. [*comp1010-choose-meaningful-names] [=comp1020-choose-concise-variable-names]
+7. [*comp1010-comments] [=comp1020-use-comments]
+8. [*comp1020-assignment-expressions-with-types]
+
+##### Create and use methods in a program 
+
+By the end of this unit, students should be able to:
+
+1. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
+   [=comp1020-write-and-call-java-methods]
+2. [*comp1010-functions-with-params-return]
+3. [*comp1020-file-scoped-static-variables]
+4. [*comp1010-use-named-constants] [=comp1020-use-named-constants-java]
+
+##### Get and use input in a program
+
+By the end of this unit, students should be able to:
+
+1. [*comp1020-input-with-scanner] [=comp1010-accept-use-input]
+   [=comp1500-visual-io] [=comp1500-io]
+
+##### Convert between types
+
+By the end of this unit, students should be able to:
+
+1. [*comp1010-use-floating-point]
+2. [*comp1010-evaluate-float-expression]
+3. [*comp1010-explain-difference-number-types]
+4. [*comp1010-call-math-library-functions]
+5. [*comp1010-use-different-number-types]
+6. [*comp1010-casting-between-number-types]
+   [=comp1020-use-upcasting-downcasting]
+7. [*comp1010-evaluate-casting-in-expression]
+8. [*comp1010-explain-float-equality]
+
+##### Write code concisely
+
+By the end of this unit, students should be able to:
+
+1. [*comp1010-use-compound-operator]
+   [=comp1020-use-increment-decrement-operators]
+   [=comp1020-use-compound-operators]
+2. [*comp1020-use-boolean-expressions-with-operators]
+
+##### Write and use conditional statements in a program
+
+By the end of this unit, students should be able to:
+
+1. [*comp1010-create-and-use-boolean-variables] [~comp1500-logical-expressions]
+2. [*comp1010-evaluate-boolean-expressions-logical-operators]
     [=comp1500-logical-expressions]
-21. [*comp1010-use-conditional-statements] [=comp1500-conditional-statements]
-22. [*comp1010-use-relational-operators]
-23. [*comp1010-evaluate-complex-boolean-expression]
-24. [*comp1010-string-comparison]
-25. [*comp1010-explain-float-equality]
-26. [*comp1010-use-short-circuit-boolean-expressions]
-27. [*comp1010-evaluate-short-circuit-boolean-expressions]
-28. [*comp1010-else-if-nested-blocks] [=comp1500-conditional-statements]
-29. [*comp1010-use-basic-loops] [=comp1500-looping]
-30. [*comp1010-evaluate-loop-execution]
-31. [*comp1010-debug-with-stack-trace]
-32. [*comp1010-use-nested-loops]
-33. [*comp1010-evaluate-nested-loop-execution]
-34. [*comp1010-use-nested-mixed-control-structures]
-35. [*comp1010-functions-with-params-return]
-36. [*comp1010-accumulate-data]
+3. [*comp1010-use-conditional-statements] [=comp1500-conditional-statements]
+   [=comp1020-conditional-statements]
+4. [*comp1010-use-relational-operators]
+5. [*comp1010-evaluate-complex-boolean-expression]
+6. [*comp1010-string-comparison]
+7. [*comp1010-use-short-circuit-boolean-expressions]
+8. [*comp1010-evaluate-short-circuit-boolean-expressions]
+9. [*comp1010-else-if-nested-blocks] [=comp1500-conditional-statements]
+
+##### Write and use looping structures in a program
+
+By the end of this unit, students should be able to:
+
+1. [*comp1010-use-basic-loops] [=comp1500-looping]
+2. [*comp1010-evaluate-loop-execution]
+3. [*comp1010-debug-with-stack-trace]
+4. [*comp1010-use-nested-loops]
+5. [*comp1010-evaluate-nested-loop-execution]
+6. [*comp1010-use-nested-mixed-control-structures]
+7. [*comp1010-accumulate-data]
 
 ### *Implementing* searching and sorting
 
