Nameref works for a variety of different situations.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -375,107 +375,33 @@ real-world situations.
 Java is **everywhere** --- it's in your pockets, powering your favourite web
 sites, crunching on scientific data, among many, *many* other places.
 
+We're not going to learn everything about Java here, but instead we'll look at
+*just enough* for us to get started in the next unit. Throughout the course,
+we're going to be looking at lots of other Java-related topics.
+
 #### Ideas for instruction {-}
 
-1. The idea here is that we're transferring knowledge, much in the same way that
-  the existing COMP 1020 does.
-
 #### Objectives {-}
-
-##### Write and run programs
 
 By the end of this unit, students should be able to:
 
 1. [*comp1020-choose-an-ide]
 2. [*comp1020-download-install-jdk]
-3. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
+3. [*comp1020-compile-and-run-from-ide]
+4. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
    [=comp1020-compile-and-run-from-ide]
    [=comp1020-write-compile-run-hello-world-java]
-   
-##### Create and use variables in a program
-
-By the end of this unit, students should be able to:
-
-1. [*comp1020-use-naming-conventions]
-2. [*comp1010-declare-use-variables] [~comp1500-variables]
+5. [*comp1020-use-naming-conventions]
+6. [*comp1010-declare-use-variables] [~comp1500-variables]
    [=comp1020-use-primitives] [=comp1020-use-variables-in-java]
-3. [*comp1010-create-use-strings] [=comp1020-use-strings]
-   [=comp1020-use-add-concat-operator]
-4. [*comp1010-determine-expression-type] [=comp1020-predict-type-of-expression]
-5. [*comp1010-write-evaluate-arithmetic-expressions]
-   [=comp1500-visual-language-simple-sequence]
-   [=comp1020-use-arithmetic-operators]
-6. [*comp1010-choose-meaningful-names] [=comp1020-choose-concise-variable-names]
-7. [*comp1010-comments] [=comp1020-use-comments]
-8. [*comp1020-assignment-expressions-with-types]
-
-##### Create and use methods in a program 
-
-By the end of this unit, students should be able to:
-
-1. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
+7. [*comp1010-choose-meaningful-names] [=comp1020-choose-concise-variable-names]
+8. [*comp1010-comments] [=comp1020-use-comments]
+9. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
    [=comp1020-write-and-call-java-methods]
-2. [*comp1010-functions-with-params-return]
-3. [*comp1020-file-scoped-static-variables]
-4. [*comp1010-use-named-constants] [=comp1020-use-named-constants-java]
-
-##### Get and use input in a program
-
-By the end of this unit, students should be able to:
-
-1. [*comp1020-input-with-scanner] [=comp1010-accept-use-input]
-   [=comp1500-visual-io] [=comp1500-io]
-
-##### Convert between types
-
-By the end of this unit, students should be able to:
-
-1. [*comp1010-use-floating-point]
-2. [*comp1010-evaluate-float-expression]
-3. [*comp1010-explain-difference-number-types]
-4. [*comp1010-call-math-library-functions]
-5. [*comp1010-use-different-number-types]
-6. [*comp1010-casting-between-number-types]
-   [=comp1020-use-upcasting-downcasting]
-7. [*comp1010-evaluate-casting-in-expression]
-8. [*comp1010-explain-float-equality]
-
-##### Write code concisely
-
-By the end of this unit, students should be able to:
-
-1. [*comp1010-use-compound-operator]
-   [=comp1020-use-increment-decrement-operators]
-   [=comp1020-use-compound-operators]
-2. [*comp1020-use-boolean-expressions-with-operators]
-
-##### Write and use conditional statements in a program
-
-By the end of this unit, students should be able to:
-
-1. [*comp1010-create-and-use-boolean-variables] [~comp1500-logical-expressions]
-2. [*comp1010-evaluate-boolean-expressions-logical-operators]
-    [=comp1500-logical-expressions]
-3. [*comp1010-use-conditional-statements] [=comp1500-conditional-statements]
-   [=comp1020-conditional-statements]
-4. [*comp1010-use-relational-operators]
-5. [*comp1010-evaluate-complex-boolean-expression]
-6. [*comp1010-string-comparison]
-7. [*comp1010-use-short-circuit-boolean-expressions]
-8. [*comp1010-evaluate-short-circuit-boolean-expressions]
-9. [*comp1010-else-if-nested-blocks] [=comp1500-conditional-statements]
-
-##### Write and use looping structures in a program
-
-By the end of this unit, students should be able to:
-
-1. [*comp1010-use-basic-loops] [=comp1500-looping]
-2. [*comp1010-evaluate-loop-execution]
-3. [*comp1010-debug-with-stack-trace]
-4. [*comp1010-use-nested-loops]
-5. [*comp1010-evaluate-nested-loop-execution]
-6. [*comp1010-use-nested-mixed-control-structures]
-7. [*comp1010-accumulate-data]
+10. [*comp1010-functions-with-params-return]
+11. Get keyboard input using the `Scanner` class and the `nextInt` method.
+     [~comp1010-accept-use-input] [~comp1020-input-with-scanner]
+     [=comp1500-visual-io] [=comp1500-io] :program#scanner-nextint:
 
 ### *Implementing* searching and sorting
 
@@ -487,9 +413,8 @@ sorting, we still can't tell computers *how* to find or order things.
 To get a computer to find and order things, we need to be able to accomplish
 several new tasks:
 
-1. Represent *primitive* information (numbers),
-2. Represent *collections* of primitive information (arrays), and
-3. Search through and sort collections of information.
+1. Represent *collections* of primitive information (arrays), and
+2. Search through and sort collections of information in *code*.
 
 #### Ideas for instruction {-}
 
@@ -499,32 +424,37 @@ By the end of this unit, students should be able to:
 
 1. [*comp1010-represent-data-collections]
 2. [*comp1010-create-use-arrays]
-3. [*comp1010-compare-strings-arrays]
-4. [*comp1010-list-default-array-values-for-type]
-5. [*comp1010-compare-values-with-null]
-6. [*comp1010-copy-array-contents]
-7. [*comp1010-compare-array-contents]
-8. [*comp1010-explain-differences-between-primitives-and-arrays]
-9. [*comp1010-functions-with-array-params-return]
-10. [*comp1010-implement-linear-search]
-    [~comp1020-write-binary-and-linear-search]
-11. [*comp1010-implement-binary-search]
-    [~comp1020-write-binary-and-linear-search]
-12. [*comp1020-write-sorting-algorithms]
+3. [*comp1010-list-default-array-values-for-type]
+4. [*comp1010-functions-with-array-params-return]
+5. [*comp1010-implement-linear-search]
+   [~comp1020-write-binary-and-linear-search]
+6. [*comp1010-implement-binary-search]
+   [~comp1020-write-binary-and-linear-search]
+7. [*comp1020-write-sorting-algorithms]
+8. [*comp1020-compare-searching-algorithms]
+9. [*comp1020-describe-basic-sorting-algorithms]
+10. [*comp1020-write-sorting-algorithms]
+11. [*comp1020-compare-sorting-algorithms]
 
 ### Representing complex information
 
-While numbers give us the ability to reason about and implement some algorithms
-in a fairly simple way (we can all universally agree that numbers are ordered
-and that we can or cannot find one in a collection of them), the real world
-isn't quite so simple. In the real world, we have real, physical things. Even in
-the world of abstractions, we've got ideas that aren't nearly as simple as
-numbers: think way back to representing *pictures*.
+While whole numbers give us the ability to reason about and implement some
+algorithms in a fairly simple way (we can all universally agree that whole
+numbers are ordered and that we can or cannot find one in a collection of them),
+the real world isn't quite so simple. In the real world, we have *parts* of
+things (fractions!). In the real world, we have things that *aren't* numbers at
+all (words!). In the real world, we have real, physical things that we can touch
+and use! Even in the world of abstractions, we've got ideas that aren't nearly
+as simple as individual whole numbers: think way back to representing *pictures*.
 
-Programming languages like Java give us the ability to express how to represent
-complex information using a concept called "classes". We're going to use classes
-to represent complex information like physical things, and abstract things that
-aren't just simple numbers.
+Programming languages in general support more kinds of numbers than whole
+numbers (`int`). We're going to start by taking a look at fractional numbers
+("floating point"), then look at how to represent words (`String`).
+
+Programming languages like Java also give us the ability to express how to
+represent complex information using a concept called "classes". We're going to
+use classes to represent complex information like physical things, and abstract
+things that aren't just simple numbers.
 
 #### Ideas for instruction {-}
 
