Including some missing outcomes.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -249,6 +249,7 @@ way that the computer can understand and act on.
 By the end of this unit, students should be able to:
 
 1. [*comp1500-assembly-language] [~comp1010-write-and-run]
+   [~comp1010-use-literals]
 2. [*comp1500-io] [=comp1010-accept-use-input]
 3. [*comp1500-branching] [~comp1010-use-conditional-statements]
 4. [*comp1500-repetition] [~comp1010-use-basic-loops]
@@ -296,6 +297,7 @@ By the end of this unit, students should be able to:
    [=comp1020-compare-searching-algorithms]
    [=comp1010-limitations-of-linear-search]
    [=comp1010-limitations-of-binary-search]
+   [=comp1020-complexity-and-data-requirements]
 5. [*comp1500-apply-sorting] [=comp1020-describe-basic-sorting-algorithms]
 7. [*comp1020-compare-sorting-algorithms]
 8. [*comp1500-sorting-complexity] [=comp1020-complexity-of-sorting-algorithms]
@@ -350,7 +352,7 @@ By the end of this unit, students should be able to:
 1. [*comp1500-write-program-given-solution]
 2. [*comp1500-compare-high-level-with-assembly]
 3. [*comp1500-visual-language-simple-sequence] [=comp1010-write-and-run]
-   [=comp1010-write-evaluate-arithmetic-expressions] 
+   [=comp1010-write-evaluate-arithmetic-expressions] [~comp1010-use-literals]
 4. [*comp1500-variables] [=comp1010-declare-use-variables]
    [=comp1010-use-named-constants]
 5. [*comp1500-logical-expressions]
@@ -358,8 +360,12 @@ By the end of this unit, students should be able to:
 6. [*comp1500-conditional-statements] [=comp1010-use-conditional-statements]
 7. [*comp1500-looping] [=comp1010-use-basic-loops]
 8. [*comp1500-custom-functions] [=comp1010-write-simple-functions]
-9. [*comp1500-visual-io] [=comp1500-io] [=comp1010-accept-use-input]
-10. [*comp1500-random-numbers]
+9. [*comp1010-trace-execution-with-functions]
+10. [*comp1010-define-term-local]
+11. [*comp1010-define-term-scope]
+12. [*comp1010-determine-scope-of-variable]
+13. [*comp1500-visual-io] [=comp1500-io] [=comp1010-accept-use-input]
+14. [*comp1500-random-numbers]
 
 Programming
 -----------
@@ -387,21 +393,25 @@ By the end of this unit, students should be able to:
 
 1. [*comp1020-choose-an-ide]
 2. [*comp1020-download-install-jdk]
-3. [*comp1020-compile-and-run-from-ide]
-4. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
-   [=comp1020-compile-and-run-from-ide]
+3. [*comp1020-compile-and-run-from-ide] [=comp1010-write-and-run]
+   [=comp1500-write-program-given-solution]
    [=comp1020-write-compile-run-hello-world-java]
-5. [*comp1020-use-naming-conventions]
-6. [*comp1010-declare-use-variables] [~comp1500-variables]
+4. [*comp1010-declare-use-variables] [~comp1500-variables]
    [=comp1020-use-primitives] [=comp1020-use-variables-in-java]
-7. [*comp1010-choose-meaningful-names] [=comp1020-choose-concise-variable-names]
-8. [*comp1010-comments] [=comp1020-use-comments]
-9. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
+   [~comp1010-use-literals]
+5. [*comp1020-use-naming-conventions]
+6. [*comp1010-choose-meaningful-names] [=comp1020-choose-concise-variable-names]
+7. [*comp1010-comments] [=comp1020-use-comments]
+8. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
    [=comp1020-write-and-call-java-methods]
-10. [*comp1010-functions-with-params-return]
-11. Get keyboard input using the `Scanner` class and the `nextInt` method.
+9. [*comp1010-functions-with-params-return]
+10. Extract "sentinel" values into named constants.
+    [=comp1010-identify-constant-values]
+    [~comp1010-compare-constants-and-variables] :program:
+11. [*comp1010-basic-print-debugging]
+12. Get keyboard input using the `Scanner` class and the `nextInt` method.
      [~comp1010-accept-use-input] [~comp1020-input-with-scanner]
-     [=comp1500-visual-io] [=comp1500-io] :program#scanner-nextint:
+     [~comp1500-visual-io] [=comp1500-io] :program:
 
 ### *Implementing* searching and sorting
 
@@ -426,15 +436,17 @@ By the end of this unit, students should be able to:
 2. [*comp1010-create-use-arrays]
 3. [*comp1010-list-default-array-values-for-type]
 4. [*comp1010-functions-with-array-params-return]
-5. [*comp1010-implement-linear-search]
+5. [*comp1010-use-conditional-statements]
+6. [*comp1010-else-if-nested-blocks]
+7. [*comp1010-use-basic-loops] [=comp1010-evaluate-loop-execution]
+8. [*comp1010-implement-linear-search]
    [~comp1020-write-binary-and-linear-search]
-6. [*comp1010-implement-binary-search]
+9. [*comp1010-implement-binary-search]
    [~comp1020-write-binary-and-linear-search]
-7. [*comp1020-write-sorting-algorithms]
-8. [*comp1020-compare-searching-algorithms]
-9. [*comp1020-describe-basic-sorting-algorithms]
-10. [*comp1020-write-sorting-algorithms]
-11. [*comp1020-compare-sorting-algorithms]
+10. [*comp1020-compare-searching-algorithms]
+11. [*comp1020-describe-basic-sorting-algorithms]
+12. [*comp1020-write-sorting-algorithms]
+13. [*comp1020-compare-sorting-algorithms]
 
 ### Representing complex information
 
@@ -462,16 +474,24 @@ things that aren't just simple numbers.
 
 By the end of this unit, students should be able to:
 
-1. [*comp1020-explain-basic-oo-concepts]
-2. [*comp1020-create-and-use-a-class]
-3. [*comp1020-evaluate-method-overloading]
-4. [*comp1020-composite-objects]
-5. [*comp1020-write-self-referencing-classes]
-6. [*comp1020-create-and-use-subclasses]
-7. [*comp1020-decide-which-property-is-referred-to-in-scope]
-8. [*comp1020-upcast-and-downcast-instances]
-9. [*comp1020-design-a-hierarchy-before-use]
-10. [*comp1020-describe-mental-model-of-hierarchy]
+1. [*comp1010-use-floating-point]
+2. [*comp1010-evaluate-float-expression]
+3. [*comp1010-explain-difference-number-types]
+4. [*comp1010-evaluate-casting-in-expression]
+5. [*comp1010-explain-effects-of-casting]
+6. [*comp1010-create-use-strings]
+7. [*comp1010-string-comparison]
+8. [*comp1020-explain-basic-oo-concepts]
+9. [*comp1020-create-and-use-a-class]
+10. [*comp1010-create-and-use-boolean-variables]
+11. [*comp1020-evaluate-method-overloading]
+12. [*comp1020-composite-objects]
+13. [*comp1020-write-self-referencing-classes]
+14. [*comp1020-create-and-use-subclasses]
+15. [*comp1020-decide-which-property-is-referred-to-in-scope]
+16. [*comp1020-upcast-and-downcast-instances]
+17. [*comp1020-design-a-hierarchy-before-use]
+18. [*comp1020-describe-mental-model-of-hierarchy]
 
 ### Getting lots of information
 
@@ -498,7 +518,13 @@ been building.
 By the end of this unit, students should be able to:
 
 1. [*comp1020-read-and-write-files] [=comp1020-read-from-a-file]
-2. [*comp1020-tokenizing-strings]
+2. [*comp1010-convert-numbers-strings]
+3. [*comp1020-tokenizing-strings]
+4. [*comp1010-create-use-char]
+5. [*comp1010-use-nested-loops]
+6. [*comp1010-use-nested-mixed-control-structures]
+7. [*comp1010-use-flags-for-events]
+8. [*comp1010-accumulate-data]
 
 ### Data structures, abstract data types, and software design
 
@@ -567,6 +593,7 @@ By the end of this unit, students should be able to:
 1. [*comp1020-write-recursive-code-given-algorithm]
 2. [*comp1020-describe-mental-model-of-recursion-as-stack]
 3. [*comp1020-explain-limitations-of-recursion]
+4. [*comp1020-write-recursive-search-functions]
 
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
