--- a/courses/COMP1020.md
+++ b/courses/COMP1020.md
@@ -423,8 +423,7 @@ By the end of this unit, students should be able to:
     1. List the data requirements for binary search to be applied (e.g.,
        ordered, contiguous memory).
        :algorithms#complexity-and-data-requirements:
-    2. List the runtime requirements of binary search and linear search, in
-       big-O notation.
+    2. List the runtime of binary search and linear search, in big-O notation.
 3. Given some data, decide if linear search or binary search should be applied.
    :algorithms#choose-an-algorithm-based-on-data:
 4. Write a program that implements linear search and binary search on an array.
@@ -437,7 +436,7 @@ By the end of this unit, students should be able to:
 7. Compare and contrast sorting algorithms (e.g., insertion sort, selection
    sort, recursive merge sort, quick sort).
    :communicate#compare-sorting-algorithms: &2140&
-    1. List the runtime requirements of different sorting algorithms. 
+    1. List the runtime of different sorting algorithms.
        :algorithms#complexity-of-sorting-algorithms:
     2. Explain why choosing a poor pivot reduces the overall performance of the
        quick sort algorithm.
